<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alertDialog"
    android:layout_width="@dimen/layout_width_325dp"
    android:layout_height="@dimen/layout_height_180dp">

    <ImageView
        android:id="@+id/warn_icon"
        android:layout_width="@dimen/layout_width_60dp"
        android:layout_height="@dimen/layout_height_60dp"
        android:layout_marginVertical="@dimen/margin_16dp"
        android:src="@drawable/warning_icon"
        app:layout_constraintBottom_toTopOf="@id/warningText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/need_login_text"
        android:textColor="@color/primary_cinder"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintBottom_toTopOf="@id/dialog_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warn_icon" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_cancel_button"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/corner_radius_0dp"
        android:text="@string/text_cancel"
        android:textColor="@color/primary_cinder"
        app:backgroundTint="@color/neutral_zircon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_login_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_login_button"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/corner_radius_0dp"
        android:text="@string/text_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>